--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.2.0/css/ion.rangeSlider.skinHTML5.css" />
 
 </head>
+<style>
+body {
+    background-color: #303030;
+}
+</style>
 <body>
   <app-root></app-root>
 </body>
